font correction, alignment correction , hover effect correction

--- a/hall_of_owasp/css/styles.css
+++ b/hall_of_owasp/css/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Teko:wght@600&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');
 body {
 	margin: 0;
 	font-family: 'Rajdhani', sans-serif;
@@ -11,6 +11,9 @@ body {
 	min-height: 100vw;
 	display: flex;
 	width: 100vw;
+}
+.fonttime {
+	font-family: 'Black Ops One', cursive;
 }
 .sample-header-section {
 	position: relative;
